--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "socket.io": "^4.1.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
